<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popup"
    android:layout_width="328dp"
    android:layout_height="425dp"
    android:layout_gravity="center"
    android:background="#ffffff"
    android:paddingBottom="20dp"
    android:radius="2dp">

    <View
        android:id="@+id/box"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="x"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="@id/box"
        app:layout_constraintTop_toTopOf="@id/box"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="32sp"
        android:text="Tracks"
        app:layout_constraintLeft_toLeftOf="@+id/box"
        app:layout_constraintRight_toRightOf="@+id/box"
        app:layout_constraintTop_toTopOf="@+id/box"
        app:layout_constraintBottom_toBottomOf="@+id/box"/>

    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="329dp"
        android:scrollbars="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/box">
    </ListView>

</android.support.constraint.ConstraintLayout>