<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_song"
    tools:context="com.example.team13.flashbackmusic.SongActivity">

    <TextView
        android:id="@+id/vibe_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />

    <Button
        android:id="@+id/trackPreviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tracks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.983"
        app:layout_constraintLeft_toLeftOf="parent"
...
