...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <ListView
        android:id="@+id/album_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</RelativeLayout>
