...
                android:layout_height="match_parent"
                android:orientation="vertical">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/song_list_view"
            />





...
